fixed nav margin on IE and Firefox

--- a/css/main.css
+++ b/css/main.css
@@ -65,6 +65,7 @@ a {
     -webkit-margin-before: 0;
     -webkit-margin-after: 0;
     -webkit-padding-start: 0;
+    margin: 0;
     transition: all 200ms ease;
 }
 
@@ -142,7 +143,7 @@ a {
     position: relative;
     z-index: 1;
     color: #fff9f0;
-    margin-top: 10%;
+    margin-top: 6em;
     padding: 3em;
     background-color: rgba(0, 0, 0, 0.5);
 }
